@@ -249,6 +249,10 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                                           'default' => false ),
                  '$session_name' => array( 'name' => _("PHP session name"),
                                            'type' => SMOPT_TYPE_HIDDEN ),
+                 '$config_location_base' => array( 'name' => _("Location base"),
+                                                   'type' => SMOPT_TYPE_STRING,
+                                                   'size' => 40,				
+                                                   'default' => '' ),
                  /* --------------------------------------------------------*/
                  'Group5' => array( 'name' => _("Message of the Day"),
                                     'type' => SMOPT_TYPE_TITLE ),
